<resources>
    <string name="app_name">StoryApp</string>
    <string name="not_found">STORY NOT FOUND</string>
    <string name="close_camera">Close Camera</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="flip_to_front_camera">Switch Camera</string>
    <string name="pick_gallery">Pick Gallery</string>
    <string name="close_upload_page">Close Upload</string>
    <string name="upload_your_story">Upload Your Story</string>
    <string name="add_description">Add Description Story</string>
    <string name="setting">"Setting"</string>
    <string name="logout">Logout</string>
    <string name="read_more_text">...Read more</string>
    <string name="email_hint">Input Your Email</string>
    <string name="email_error">Email has required</string>
    <string name="password_hint">Input Your Password</string>
    <string name="password_error">Wrong password</string>
    <string name="password_confirmation_hint">Confirm Your Password</string>
    <string name="name">Name</string>
    <string name="name_error">Wrong Name</string>
    <string name="login_intro">Post your random activity in Story App!</string>
    <string name="login_title">Hello Welcome</string>
    <string name="form_error">Please complete your form</string>
    <string name="register_question">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_intro">Let\'s join and see random story</string>
    <string name="sign_in_question">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password_must_same">Password must same</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">Story Maps</string>
    <string name="retry">Retry</string>
    <string name="empty">Sorry Story Has Empty</string>
</resources>